--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "element-ui": "^1.2.5",
+    "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "normalize.css": "^6.0.0",
     "vue": "^2.1.10",
